ajout de boost pour récompenser le joueur

--- a/game.html
+++ b/game.html
@@ -14,6 +14,11 @@
 <div id="cripto"></div>
 <button id="button">👊💰 Mom i swear i will make it </button>
 <button id="reset">🔄 Back in the hood</button>
+<button id="boost10">Boost 10</button>
+<button id="boost50">Boost 50</button>
+<button id="boost100">Boost 100</button>
+<button id="boost300">Boost 50</button>
+
 
 
 
@@ -23,3 +28,5 @@
     </footer>
 </body>
 </html>
+
+
