channgement de sttyle re et repositionement des items et changer les element ENG en FR

--- a/moneyclick-Sc-ne-animation/scene.html
+++ b/moneyclick-Sc-ne-animation/scene.html
@@ -82,25 +82,20 @@
       <span class="music-info">Music: On</span>
     </div>
   </div>
-  <button id="exchangeBtn">Échanger 500 BTC contre 50 €</button>
-  <div class="controls">
-    <button id="moveLeft">⬅️ Left</button>
-    <button id="jump">⬆️ Jump</button>
-    <button id="moveRight">➡️ Right</button>
-  </div>
-  
+  <button id="exchangeBtn">Echange💵</button>
+
   <div class="game-instructions">
-    Use arrow keys to move, or use the buttons. Walk to the bed or dresser for interactions.
+    Utilisez les flèches directionnelles pour vous déplacer
   </div>
 
   <div id="dresserPopup" class="popup">
-    <h2>Dresser</h2>
+    <h2>Commode</h2>
     <p>ici tu peux commencer à miner</p>
     <button class="popup-close" onclick="closePopup('dresserPopup')">fermer</button>
   </div>
   
   <div id="bedPopup" class="popup">
-    <h2>Comfortable Bed</h2>
+    <h2>Lit Confortable</h2>
     <p>
         ici tu peux te  reposer et acheter des items
     </p>
