modif sur les gains et récompenses faait en sorte de gagner moins pour scale

--- a/moneyclick-Sc-ne-animation/scene.html
+++ b/moneyclick-Sc-ne-animation/scene.html
@@ -92,8 +92,8 @@
   <div id="bonusModal" class="modal">
     <div class="modal-content">
         <p>🎁 Félicitations ! Vous avez atteint <span id="milestoneCripto"></span> BTC ! Choisissez une récompense :</p>
-        <button id="doubleClickGain">🔁 Doubler le gain par clic</button>
-        <button id="doublePassiveIncome">🕒 Doubler le revenu passif</button>
+        <button id="doubleClickGain">🔁Augmente ton clic</button>
+        <button id="doublePassiveIncome">🕒 Augmente ton revenu passif</button>
     </div>
 </div>
 
